[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/dialogs/addconnectiondialog.gd" type="Script" id=1]

[node name="AddConnectionDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = -107.0
margin_right = 362.5
margin_bottom = 493.0
rect_min_size = Vector2( 400, 600 )
popup_exclusive = true
window_title = "Add new connection"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 590.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 14.0
text = "Select the service to connect to:"

[node name="ConnectorBoxNode" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 380.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.75
auto_height = true
max_columns = 4
same_column_width = true
fixed_column_width = 100
icon_mode = 0
fixed_icon_size = Vector2( 50, 50 )

[node name="ConnectorUIContainer" type="Container" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 380.0
margin_bottom = 516.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 520.0
margin_right = 380.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 554.0
margin_right = 380.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 291.0
margin_right = 345.0
margin_bottom = 26.0
text = "Cancel"

[node name="OKButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 349.0
margin_right = 380.0
margin_bottom = 26.0
text = "OK"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/ConnectorBoxNode" to="." method="_on_ConnectorBoxNode_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]
